update ex01- edit css menu

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 .container.list-menu ul li a {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
     background-color: #170807;
     border-radius: 5px;
@@ -24,87 +24,6 @@
     width: 100%;
     text-align: center;
     border: 1px solid #000;
-}
-
-/* css-cv */
-body.body-cv {
-    background-color: #a47674;
-}
-.container.cv {
-    max-width: 804px;
-    min-height: 900px;
-    padding: 25px 70px 0px;
-    background-color: hsl(0, 0%, 100%);
-    margin-top: 25px;
-}
-
-.cv-header {
-    text-align: center;
-}
-
-.cv-header h1 {
-    font-size: 20px;
-}
-
-.cv-header p {
-    font-size: 14px;
-    color: #111;
-    padding-top: 5px;
-}
-
-.cv-content {
-    padding-top: 35px;
-}
-
-.container h2 {
-    font-size: 15px;
-}
-
-.cv-border-top {
-    border-top: 1px solid #000;
-    margin-top: 5px;
-}
-
-.cv-job-title {
-    padding-top: 15px;
-}
-
-.cv-content h3 {
-    font-size: 15px;
-}
-
-.heading-3 {
-    text-align: justify;
-}
-
-.cv-heading-3 span {
-    display: inline-block;
-}
-
-.cv-full-width {
-    width: 100%;
-}
-
-.cv-job-description {
-    font-size: 13px;
-}
-
-.cv-job-description ul {
-    padding-left: 20px;
-}
-
-.cv-job-description ul li {
-    line-height: 1.5;
-    color: #111;
-}
-
-.cv-content-footer {
-    margin-top: 20px;
-}
-
-.cv-content-footer p {
-    font-size: 12px;
-    padding: 10px 0px;
 }
 
 /* menu */
@@ -126,21 +45,44 @@ body.body-cv {
 
 .container.menu ul li {
     display: inline-block;
+    font-size: 1rem;;
 }
 
 .container.menu ul li a {
     color: #fff;
     padding: 30px 45px;
-    font-size: 16px;
     font-weight: 600;
     display: inline-block;
 }
-
 .container.menu ul li.active a {
     color: #222;
     background-color: #fff;
 }
-
+.container.menu ul li:hover a {
+    color: #1a1a1a;
+    background-color: #A8E10C ;
+}
+.menu ul li:nth-child(2) a::after {
+    content: '\f0d7'; 
+    font-family: 'Font Awesome 5 Free'; 
+    font-weight: 900;
+    display: inline-block;
+    padding-left: 10px;
+    color: #fff;
+    font-size: 1rem;
+}
+.menu ul li:nth-child(7) a::after {
+    content: '\f0d7'; 
+    font-family: 'Font Awesome 5 Free'; 
+    font-weight: 900;
+    display: inline-block;
+    color: #1a1a1a;
+    padding-left: 10px;
+    font-size: 1rem;
+}
+.menu ul li:nth-child(2):hover a::after{
+    color:#000;
+}
 /* form */
 body.form-body {
     background-color: #d5d0b0;
@@ -157,7 +99,7 @@ body.form-body {
 }
 
 .form h1 {
-    font-size: 24px;
+    font-size: 1.5rem;
     text-align: center;
 }
 
@@ -167,7 +109,7 @@ body.form-body {
 }
 
 .form-group label {
-    font-size: 16px;
+    font-size: 1rem;
     color: #111;
 }
 
@@ -177,7 +119,7 @@ body.form-body {
 }
 
 .form-group-row label {
-    font-size: 15px;
+    font-size: 1rem;
     padding-right: 20px;
 }
 
@@ -265,7 +207,7 @@ body.form-body {
 .form-group-checkbox label {
     margin-top: 8px;
     display: block;
-    font-size: 15px;
+    font-size: 1rem;
 }
 
 .form-group-checkbox input[type="checkbox"] {
